--- a/PD.html
+++ b/PD.html
@@ -57,17 +57,17 @@
 <body>
 
 <header>
-    <h1>Philips Deng's Personal Website</h1>
+    <h1>Philips Deng</h1>
 </header>
 
 <div class="container">
     <section class="intro">
-        <h2>关于我</h2>
-        <p>你好，我是Philips Deng。我是一名机器人和人工智能专业的硕士生，热爱摄影和编程。</p>
+        <h2>About me</h2>
+        <p>Servus! I'm Philips Deng, a postgraduate in Robotics&Intelligence.</p>
     </section>
 
     <section class="gallery">
-        <h2>摄影作品</h2>
+        <h2>Photograph</h2>
         <!-- 示例照片，替换为你的照片链接和描述 -->
         <div>
             <img src="photo1.jpg" alt="Photo 1">
@@ -112,9 +112,9 @@
     </section>
 
     <section class="contact">
-        <h2>联系方式</h2>
-        <p>Email: philips.deng@example.com</p>
-        <p>手机: 123-456-7890</p>
+        <h2>Contact</h2>
+        <p>Email: philips.deng@yahoo.com</p>
+        <p>ig: philips_deng</p>
     </section>
 </div>
 
