--- a/PD.html
+++ b/PD.html
@@ -70,43 +70,43 @@
         <h2>Photograph</h2>
         <!-- 示例照片，替换为你的照片链接和描述 -->
         <div>
-            <img src="photo1.jpg" alt="Photo 1">
+            <img src="images/photo1.jpg" alt="Photo 1">
             <div class="description">描述1</div>
         </div>
         <div>
-            <img src="photo2.jpg" alt="Photo 2">
+            <img src="images/photo2.jpg" alt="Photo 2">
             <div class="description">描述2</div>
         </div>
         <div>
-            <img src="photo3.jpg" alt="Photo 3">
+            <img src="images/photo3.jpg" alt="Photo 3">
             <div class="description">描述3</div>
         </div>
         <div>
-            <img src="photo4.jpg" alt="Photo 4">
+            <img src="images/photo4.jpg" alt="Photo 4">
             <div class="description">描述4</div>
         </div>
         <div>
-            <img src="photo5.jpg" alt="Photo 5">
+            <img src="images/photo5.jpg" alt="Photo 5">
             <div class="description">描述5</div>
         </div>
         <div>
-            <img src="photo6.jpg" alt="Photo 6">
+            <img src="images/photo6.jpg" alt="Photo 6">
             <div class="description">描述6</div>
         </div>
         <div>
-            <img src="photo7.jpg" alt="Photo 7">
+            <img src="images/photo7.jpg" alt="Photo 7">
             <div class="description">描述7</div>
         </div>
         <div>
-            <img src="photo8.jpg" alt="Photo 8">
+            <img src="images/photo8.jpg" alt="Photo 8">
             <div class="description">描述8</div>
         </div>
         <div>
-            <img src="photo9.jpg" alt="Photo 9">
+            <img src="images/photo9.jpg" alt="Photo 9">
             <div class="description">描述9</div>
         </div>
         <div>
-            <img src="photo10.jpg" alt="Photo 10">
+            <img src="images/photo10.jpg" alt="Photo 10">
             <div class="description">描述10</div>
         </div>
     </section>
@@ -124,4 +124,3 @@
 
 </body>
 </html>
-
