--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         .gallery img {
             width: 200px;
             height: 200px;
-            object-fit: cover;
+            object-fit: contain;
         }
         .description {
             text-align: center;
