--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             content: '▶'; /* 初始显示为右箭头 */
             position: absolute;
             left: 10px; /* 调整小三角的位置 */
-            transition: transform 0.4s; /* 添加旋转过渡效果 */
+            transition: transform 0.3s; /* 添加旋转过渡效果 */
         }
         .accordion-item-header-container.active::before {
             transform: rotate(90deg); /* 活动状态时旋转小三角 */
@@ -104,6 +104,7 @@
             background-color: #121212;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* 添加轻微的阴影效果 */
             transition: transform 0.3s, box-shadow 0.3s;
+            text-align: center;
         }
         .gallery-item:hover {
             transform: translateY(-10px);
@@ -189,99 +190,131 @@
             <div class="accordion-item-content">
                 <div class="gallery">
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo1.jpg" alt="Photo 1">
-                        </div>
+                        <a href="images/photo1.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo1.jpg" alt="The dark church">
+                            </div>
+                        </a>
                         <div class="description">The dark church</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo2.jpg" alt="Photo 2">
-                        </div>
+                        <a href="images/photo2.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo2.jpg" alt="Zebra crossing">
+                            </div>
+                        </a>
                         <div class="description">Zebra crossing</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo3.jpg" alt="Photo 3">
-                        </div>
+                        <a href="images/photo3.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo3.jpg" alt="Surfing">
+                            </div>
+                        </a>
                         <div class="description">Surfing</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo4.jpg" alt="Photo 4">
-                        </div>
+                        <a href="images/photo4.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo4.jpg" alt="Aurora">
+                            </div>
+                        </a>
                         <div class="description">Aurora</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo5.jpg" alt="Photo 5">
-                        </div>
+                        <a href="images/photo5.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo5.jpg" alt="Half horse">
+                            </div>
+                        </a>
                         <div class="description">Half horse</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo6.jpg" alt="Photo 6">
-                        </div>
+                        <a href="images/photo6.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo6.jpg" alt="Sunset in Englische Garten">
+                            </div>
+                        </a>
                         <div class="description">Sunset in Englische Garten</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo7.jpg" alt="Photo 7">
-                        </div>
+                        <a href="images/photo7.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo7.jpg" alt="FC Bayern">
+                            </div>
+                        </a>
                         <div class="description">FC Bayern</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo8.jpg" alt="Photo 8">
-                        </div>
+                        <a href="images/photo8.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo8.jpg" alt="Horse & cop">
+                            </div>
+                        </a>
                         <div class="description">Horse & cop</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo9.jpg" alt="Photo 9">
-                        </div>
+                        <a href="images/photo9.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo9.jpg" alt="Pink Cafe">
+                            </div>
+                        </a>
                         <div class="description">Pink Cafe</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo10.jpg" alt="Photo 10">
-                        </div>
+                        <a href="images/photo10.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo10.jpg" alt="Notre Dame">
+                            </div>
+                        </a>
                         <div class="description">Notre Dame</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo11.jpg" alt="Photo 11">
-                        </div>
+                        <a href="images/photo11.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo11.jpg" alt="Tower">
+                            </div>
+                        </a>
                         <div class="description">Tower</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo12.jpg" alt="Photo 12">
-                        </div>
+                        <a href="images/photo12.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo12.jpg" alt="Tree seat">
+                            </div>
+                        </a>
                         <div class="description">Tree seat</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo13.jpg" alt="Photo 13">
-                        </div>
+                        <a href="images/photo13.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo13.jpg" alt="Gaze">
+                            </div>
+                        </a>
                         <div class="description">Gaze</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo14.jpg" alt="Photo 14">
-                        </div>
+                        <a href="images/photo14.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo14.jpg" alt="Underground girl">
+                            </div>
+                        </a>
                         <div class="description">Underground girl</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo15.jpg" alt="Photo 15">
-                        </div>
+                        <a href="images/photo15.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo15.jpg" alt="Hague">
+                            </div>
+                        </a>
                         <div class="description">Hague</div>
                     </div>
                     <div class="gallery-item">
-                        <div class="image-container">
-                            <img src="images/photo16.jpg" alt="Photo 16">
-                        </div>
+                        <a href="images/photo16.jpg" target="_self">
+                            <div class="image-container">
+                                <img src="images/photo16.jpg" alt="Sparkle">
+                            </div>
+                        </a>
                         <div class="description">Sparkle</div>
                     </div>
                 </div>
