--- a/index.html
+++ b/index.html
@@ -153,6 +153,40 @@
             position: relative; /* 修改为relative，以防止固定位置遮挡内容 */
             width: 100%;
         }
+        /* 大图显示容器样式 */
+        .lightbox {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        .lightbox img {
+            max-width: 80%;
+            max-height: 80%;
+        }
+        .lightbox .description {
+            margin-top: 10px;
+            font-size: 16px;
+            color: #fff;
+        }
+        .lightbox .close-btn {
+            position: absolute;
+            top: 20px;
+            right: 200px;
+            background-color: #000000;
+            color: #e7e7e7;
+            border: none;
+            font-size: 20px;
+            cursor: pointer;
+            padding: 10px 15px;
+            border-radius: 50%;
+        }
     </style>
 </head>
 <body>
@@ -161,8 +195,8 @@
 <header>
     <h1>Philips Deng</h1>
     <div class="language-switch">
-        <button onclick="switchLanguage('en')">EN</button>
         <button onclick="switchLanguage('zh')">中文</button>
+        <button onclick="switchLanguage('en')">EN</button>
         <button onclick="switchLanguage('de')">DE</button>
     </div>
 </header>
@@ -175,146 +209,114 @@
         <h2 data-lang="zh" style="display:none;">关于我</h2>
         <h2 data-lang="de" style="display:none;">Über mich</h2>
         <p data-lang="en">Servus! I'm Philips Deng, a postgraduate in Robotics & Intelligence.</p>
-        <p data-lang="zh" style="display:none;">你好！我是Philips Deng，一名机器人与智能技术的研究生。</p>
-        <p data-lang="de" style="display:none;">Servus! Ich bin Philips Deng, ein Postgraduierter in Robotik und Intelligenz.</p>
+        <p data-lang="zh" style="display:none;">你好！我是菲利普斯邓，一名机器人与智能技术的研究生。</p>
+        <p data-lang="de" style="display:none;">Servus! Ich bin Philips Deng, ein Masterstudent im Bereich Robotik und Künstliche Intelligenz.</p>
     </section>
 
     <!-- 折叠菜单部分 -->
     <section class="accordion">
         <div class="accordion-item">
             <div class="accordion-item-header-container" onclick="toggleAccordion(this)">
-                <div class="accordion-item-header" data-lang="en">Show Photographs</div>
+                <div class="accordion-item-header" data-lang="en">My Gallery</div>
                 <div class="accordion-item-header" data-lang="zh" style="display:none;">展示照片</div>
-                <div class="accordion-item-header" data-lang="de" style="display:none;">Fotos zeigen</div>
+                <div class="accordion-item-header" data-lang="de" style="display:none;">Galerie anzeigen</div>
             </div>
             <div class="accordion-item-content">
                 <div class="gallery">
-                    <div class="gallery-item">
-                        <a href="images/photo1.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo1.jpg" alt="The dark church">
-                            </div>
-                        </a>
+                    <div class="gallery-item" onclick="showLightbox('images/photo1.jpg', 'The dark church')">
+                        <div class="image-container">
+                            <img src="images/photo1.jpg" alt="The dark church" loading="lazy">
+                        </div>
                         <div class="description">The dark church</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo2.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo2.jpg" alt="Zebra crossing">
-                            </div>
-                        </a>
+                    <div class="gallery-item" onclick="showLightbox('images/photo2.jpg', 'Zebra crossing')">
+                        <div class="image-container">
+                            <img src="images/photo2.jpg" alt="Zebra crossing" loading="lazy">
+                        </div>
                         <div class="description">Zebra crossing</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo3.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo3.jpg" alt="Surfing">
-                            </div>
-                        </a>
+                    <div class="gallery-item" onclick="showLightbox('images/photo3.jpg', 'Surfing')">
+                        <div class="image-container">
+                            <img src="images/photo3.jpg" alt="Surfing" loading="lazy">
+                        </div>
                         <div class="description">Surfing</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo4.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo4.jpg" alt="Aurora">
-                            </div>
-                        </a>
+                    <div class="gallery-item" onclick="showLightbox('images/photo4.jpg', 'Aurora')">
+                        <div class="image-container">
+                            <img src="images/photo4.jpg" alt="Aurora" loading="lazy">
+                        </div>
                         <div class="description">Aurora</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo5.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo5.jpg" alt="Half horse">
-                            </div>
-                        </a>
-                        <div class="description">Half horse</div>
+                    <div class="gallery-item" onclick="showLightbox('images/photo5.jpg', 'Half a horse')">
+                        <div class="image-container">
+                            <img src="images/photo5.jpg" alt="Half a horse" loading="lazy">
+                        </div>
+                        <div class="description">Half a horse</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo6.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo6.jpg" alt="Sunset in Englische Garten">
-                            </div>
-                        </a>
+                    <div class="gallery-item" onclick="showLightbox('images/photo6.jpg', 'Sunset in Englische Garten')">
+                        <div class="image-container">
+                            <img src="images/photo6.jpg" alt="Sunset in Englische Garten" loading="lazy">
+                        </div>
                         <div class="description">Sunset in Englische Garten</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo7.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo7.jpg" alt="FC Bayern">
-                            </div>
-                        </a>
+                    <div class="gallery-item" onclick="showLightbox('images/photo7.jpg', 'FC Bayern')">
+                        <div class="image-container">
+                            <img src="images/photo7.jpg" alt="FC Bayern" loading="lazy">
+                        </div>
                         <div class="description">FC Bayern</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo8.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo8.jpg" alt="Horse & cop">
-                            </div>
-                        </a>
-                        <div class="description">Horse & cop</div>
+                    <div class="gallery-item" onclick="showLightbox('images/photo8.jpg', 'Horse & Cop')">
+                        <div class="image-container">
+                            <img src="images/photo8.jpg" alt="Horse & Cop" loading="lazy">
+                        </div>
+                        <div class="description">Horse & Cop</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo9.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo9.jpg" alt="Pink Cafe">
-                            </div>
-                        </a>
+                    <div class="gallery-item" onclick="showLightbox('images/photo9.jpg', 'Pink Cafe')">
+                        <div class="image-container">
+                            <img src="images/photo9.jpg" alt="Pink Cafe" loading="lazy">
+                        </div>
                         <div class="description">Pink Cafe</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo10.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo10.jpg" alt="Notre Dame">
-                            </div>
-                        </a>
+                    <div class="gallery-item" onclick="showLightbox('images/photo10.jpg', 'Notre Dame')">
+                        <div class="image-container">
+                            <img src="images/photo10.jpg" alt="Notre Dame" loading="lazy">
+                        </div>
                         <div class="description">Notre Dame</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo11.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo11.jpg" alt="Tower">
-                            </div>
-                        </a>
+                    <div class="gallery-item" onclick="showLightbox('images/photo11.jpg', 'Tower')">
+                        <div class="image-container">
+                            <img src="images/photo11.jpg" alt="Tower" loading="lazy">
+                        </div>
                         <div class="description">Tower</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo12.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo12.jpg" alt="Tree seat">
-                            </div>
-                        </a>
+                    <div class="gallery-item" onclick="showLightbox('images/photo12.jpg', 'Tree seat')">
+                        <div class="image-container">
+                            <img src="images/photo12.jpg" alt="Tree seat" loading="lazy">
+                        </div>
                         <div class="description">Tree seat</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo13.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo13.jpg" alt="Gaze">
-                            </div>
-                        </a>
+                    <div class="gallery-item" onclick="showLightbox('images/photo13.jpg', 'Gaze')">
+                        <div class="image-container">
+                            <img src="images/photo13.jpg" alt="Gaze" loading="lazy">
+                        </div>
                         <div class="description">Gaze</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo14.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo14.jpg" alt="Underground girl">
-                            </div>
-                        </a>
+                    <div class="gallery-item" onclick="showLightbox('images/photo14.jpg', 'Underground girl')">
+                        <div class="image-container">
+                            <img src="images/photo14.jpg" alt="Underground girl" loading="lazy">
+                        </div>
                         <div class="description">Underground girl</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo15.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo15.jpg" alt="Hague">
-                            </div>
-                        </a>
+                    <div class="gallery-item" onclick="showLightbox('images/photo15.jpg', 'Hague')">
+                        <div class="image-container">
+                            <img src="images/photo15.jpg" alt="Hague" loading="lazy">
+                        </div>
                         <div class="description">Hague</div>
                     </div>
-                    <div class="gallery-item">
-                        <a href="images/photo16.jpg" target="_self">
-                            <div class="image-container">
-                                <img src="images/photo16.jpg" alt="Sparkle">
-                            </div>
-                        </a>
+                    <div class="gallery-item" onclick="showLightbox('images/photo16.jpg', 'Sparkle')">
+                        <div class="image-container">
+                            <img src="images/photo16.jpg" alt="Sparkle" loading="lazy">
+                        </div>
                         <div class="description">Sparkle</div>
                     </div>
                 </div>
@@ -339,6 +341,13 @@
     <p>&copy; 2024 Philips Deng. All rights reserved.</p>
 </footer>
 
+<!-- 大图显示容器 -->
+<div class="lightbox" id="lightbox">
+    <button class="close-btn" onclick="closeLightbox()">X</button>
+    <img id="lightbox-image" src="" alt="">
+    <div class="description" id="lightbox-description"></div>
+</div>
+
 <!-- JavaScript -->
 <script>
     // 折叠菜单切换函数
@@ -359,7 +368,24 @@
     }
 
     // 默认语言切换调用
-    switchLanguage('de'); // 假设默认语言为德语
+    switchLanguage('en'); // 假设默认语言为德语
+
+    // 显示大图功能
+    function showLightbox(imageSrc, description) {
+        const lightbox = document.getElementById('lightbox');
+        const lightboxImage = document.getElementById('lightbox-image');
+        const lightboxDescription = document.getElementById('lightbox-description');
+
+        lightboxImage.src = imageSrc;
+        lightboxDescription.textContent = description;
+        lightbox.style.display = 'flex';
+    }
+
+    // 关闭大图功能
+    function closeLightbox() {
+        const lightbox = document.getElementById('lightbox');
+        lightbox.style.display = 'none';
+    }
 </script>
 
 </body>
