--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             position: absolute;
             right: 20px;
             top: 20px;
+            display: flex;
+            gap: 5px;
         }
         .language-switch button {
             background: none;
@@ -37,6 +39,16 @@
         }
         .language-switch button:hover {
             text-decoration: underline;
+        }
+        @media (max-width: 480px) {
+            .language-switch {
+                flex-direction: column;
+                right: 10px;
+                top: 10px;
+            }
+            .language-switch button {
+                margin: 2px 0;
+            }
         }
         /* 设置容器样式 */
         .container {
@@ -161,11 +173,12 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(0, 0, 0, 0.95);
             justify-content: center;
             align-items: center;
             flex-direction: column;
         }
+
         .lightbox img {
             max-width: 80%;
             max-height: 80%;
@@ -177,16 +190,46 @@
         }
         .lightbox .close-btn {
             position: absolute;
-            top: 20px;
-            right: 200px;
+            top: 20px; /* 调整为你希望的位置 */
+            right: 200px; /* 调整为你希望的位置 */
             background-color: #000000;
             color: #e7e7e7;
-            border: none;
-            font-size: 20px;
+            border: 0.1rem solid #ffffff;
+            font-size: 14px; /* 调整按钮的字体大小 */
             cursor: pointer;
-            padding: 10px 15px;
-            border-radius: 50%;
+            width: 30px; /* 设置按钮的宽度 */
+            height: 30px; /* 设置按钮的高度 */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%; /* 保持圆形 */
         }
+        @media (max-width: 768px) {
+        .lightbox .close-btn {
+            display: none;
+        }
+        }
+                /* 添加淡入动画 */
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        /* 添加淡出动画 */
+        @keyframes fadeOut {
+            from { opacity: 1; }
+            to { opacity: 0; }
+        }
+
+        /* 设置大图显示容器的动画 */
+        .lightbox.fade-in {
+            animation: fadeIn 0.3s forwards;
+        }
+
+        .lightbox.fade-out {
+            animation: fadeOut 0.3s forwards;
+        }
+
     </style>
 </head>
 <body>
@@ -368,7 +411,7 @@
     }
 
     // 默认语言切换调用
-    switchLanguage('en'); // 假设默认语言为德语
+    switchLanguage('en'); // 假设默认语言为英语
 
     // 显示大图功能
     function showLightbox(imageSrc, description) {
@@ -378,14 +421,30 @@
 
         lightboxImage.src = imageSrc;
         lightboxDescription.textContent = description;
+        lightbox.classList.remove('fade-out');
+        lightbox.classList.add('fade-in');
         lightbox.style.display = 'flex';
     }
 
     // 关闭大图功能
-    function closeLightbox() {
+    function closeLightbox(event = null) {
         const lightbox = document.getElementById('lightbox');
-        lightbox.style.display = 'none';
+        if (!event || event.target === lightbox || event.target.classList.contains('close-btn')) {
+            lightbox.classList.remove('fade-in');
+            lightbox.classList.add('fade-out');
+            setTimeout(() => {
+                lightbox.style.display = 'none';
+            }, 300); // 动画时间应与CSS中的animation时间一致
+        }
     }
+
+    // 给大图容器添加点击事件，确保点击图片外的部分关闭大图
+    document.getElementById('lightbox').addEventListener('click', function(event) {
+        if (event.target === this) {
+            closeLightbox(event);
+        }
+    });
+
 </script>
 
 </body>
