refactor: update Chinese translation for about me section

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <h2 data-lang="zh" style="display:none;">关于我</h2>
         <h2 data-lang="de" style="display:none;">Über mich</h2>
         <p data-lang="en">Servus! I'm Philips Deng, a postgraduate in Robotics & Intelligence.</p>
-        <p data-lang="zh" style="display:none;">你好！我是菲利普斯邓，一名机器人与智能技术的研究生。</p>
+        <p data-lang="zh" style="display:none;">你好！我是邓，一名机器人与人工智能的研究生。</p>
         <p data-lang="de" style="display:none;">Servus! Ich bin Philips Deng, ein Masterstudent im Bereich Robotik und Künstliche Intelligenz.</p>
     </section>
 
