--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
         <h2 data-lang="en">About me</h2>
         <h2 data-lang="zh" style="display:none;">关于我</h2>
         <h2 data-lang="de" style="display:none;">Über mich</h2>
-        <p data-lang="en">Servus! I'm Philips Deng, a postgraduate in Robotics & Intelligence.</p>
-        <p data-lang="zh" style="display:none;">你好！我是邓，一名机器人与人工智能的研究生。</p>
-        <p data-lang="de" style="display:none;">Servus! Ich bin Philips Deng, ein Masterstudent im Bereich Robotik und Künstliche Intelligenz.</p>
+        <p data-lang="en">Servus! I'm Philips Deng, a photographer & postgraduate in Robotics & Intelligence.</p>
+        <p data-lang="zh" style="display:none;">你好！我是邓，一名摄影师&机器人与人工智能的研究生。</p>
+        <p data-lang="de" style="display:none;">Servus! Ich bin Philips Deng, ein Fotograf & Masterstudent im Bereich Robotik und Künstliche Intelligenz.</p>
     </section>
 
     <!-- 折叠菜单部分 -->
