chore: Add new projects section to index.html

--- a/index.html
+++ b/index.html
@@ -365,6 +365,20 @@
                 </div>
             </div>
         </div>
+        <!-- 新增的项目部分 -->
+        <div class="accordion-item">
+            <div class="accordion-item-header-container" onclick="toggleAccordion(this)">
+                <div class="accordion-item-header" data-lang="en">Projects</div>
+                <div class="accordion-item-header" data-lang="zh" style="display:none;">项目</div>
+                <div class="accordion-item-header" data-lang="de" style="display:none;">Projekte</div>
+            </div>
+            <div class="accordion-item-content">
+                <ul>
+                    <li><a href="https://github.com/Pangolin112/SplatterScene" target="_blank" style="color: rgba(255, 255, 255, 0.349);">SplatterScene:Single input to 3DGS on indoor scenes</a></li>
+                    <li><a href="https://github.com/wxinhua/tum-adlr-01" target="_blank" style="color: rgba(255, 255, 255, 0.349);">Motion planning with moving obstacles: RL based hybrid algorithm</a></li>
+                </ul>
+            </div>
+        </div>
     </section>
 
     <!-- 联系方式部分 -->
