--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Philips Deng's Personal Website</title>
+    <title>Projects - Philips Deng</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -31,14 +31,15 @@
 
     <!-- 页面主体 -->
     <div class="container">
-        <!-- 简介部分 -->
-        <section class="intro">
-            <h2 data-lang="en">About me</h2>
-            <h2 data-lang="zh" style="display:none;">关于我</h2>
-            <h2 data-lang="de" style="display:none;">Über mich</h2>
-            <p data-lang="en">Servus! I'm Philips Deng, a photographer & postgraduate in Robotics & Intelligence.</p>
-            <p data-lang="zh" style="display:none;">你好！我是邓，一名摄影师&机器人与人工智能的研究生。</p>
-            <p data-lang="de" style="display:none;">Servus! Ich bin Philips Deng, ein Fotograf & Masterstudent im Bereich Robotik und Künstliche Intelligenz.</p>
+        <!-- 项目部分 -->
+        <section class="projects-section">
+            <h2 data-lang="en">Research Project</h2>
+            <h2 data-lang="zh" style="display:none;">研究项目</h2>
+            <h2 data-lang="de" style="display:none;">Forschungsprojekt</h2>
+            <ul>
+                <li><a href="https://github.com/Pangolin112/SplatterScene" target="_blank" style="color: rgba(255, 255, 255, 0.349);">SplatterScene: Single input to 3DGS on indoor scenes</a></li>
+                <li><a href="https://github.com/wxinhua/tum-adlr-01" target="_blank" style="color: rgba(255, 255, 255, 0.349);">Motion planning with moving obstacles: RL based hybrid algorithm</a></li>
+            </ul>
         </section>
     </div>
 
